name: jsaddle-wkwebview
version: 0.9.7.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScipt helper.
category: Web, Javascript
author: Hamish Mackenzie

flag include-app-delegate
    description: Include default AppDelegate C sources.
    default: True

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle

library
    exposed-modules:
        Language.Javascript.JSaddle.WKWebView
    build-depends:
        base <5
    default-language: Haskell2010
    hs-source-dirs: src
    frameworks: Foundation, WebKit
    ghc-options: -ferror-spans -Wall
    if impl(ghcjs)
        hs-source-dirs: src-ghcjs
    else
        build-depends:
            aeson >=0.8.0.2 && <1.5,
            bytestring >=0.10.6.0 && <0.11,
            directory,
            jsaddle >= 0.9.4.0 && <0.10,
            text,
            data-default,
            containers
        exposed-modules:
            Language.Javascript.JSaddle.WKWebView.Internal
        hs-source-dirs: src-ghc
        c-sources:
            cbits/WKWebView.m
        cc-options: -Wno-everything
        if os(ios)
            frameworks: UIKit, UserNotifications
            if flag(include-app-delegate)
              c-sources:
                  cbits-uikit/AppDelegate.m
                  cbits-uikit/ViewController.m
              cpp-options: -DUSE_UIKIT
        else
            frameworks: Cocoa
            if flag(include-app-delegate)
              c-sources:
                  cbits-cocoa/AppDelegate.m
              cpp-options: -DUSE_COCOA
