cabal-version: 3.0
name: jsaddle-wkwebview
version: 0.9.9.0
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScipt helper.
category: Web, Javascript
author: Hamish Mackenzie
tested-with: GHC==9.10.1, GHC==9.8.4, GHC==9.6.6, GHC==9.4.8, GHC==9.2.8, GHC==9.0.2, GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4

flag include-app-delegate
    description: Include default AppDelegate C sources.
    default: True

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle

library
    exposed-modules:
        Language.Javascript.JSaddle.WKWebView
    build-depends:
        base <5
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall
    if os(linux)
        buildable: False
    if impl(ghcjs) || arch(javascript)
        hs-source-dirs: src-ghcjs
    else
        frameworks: Foundation, WebKit
        build-depends:
            aeson >=0.8.0.2 && <2.3,
            bytestring >=0.10.6.0 && <0.13,
            directory,
            jsaddle >= 0.9.9.0 && <0.10,
            text,
            data-default,
            containers
        exposed-modules:
            Language.Javascript.JSaddle.WKWebView.Internal
        hs-source-dirs: src-ghc
        cxx-sources:
            cbits/WKWebView.m
        cc-options: -Wno-everything
        if os(ios)
            frameworks: UIKit, UserNotifications
            if flag(include-app-delegate)
              cxx-sources:
                  cbits-uikit/AppDelegate.m
                  cbits-uikit/ViewController.m
              cpp-options: -DUSE_UIKIT
        else
            frameworks: Cocoa
            if flag(include-app-delegate)
              cxx-sources:
                  cbits-cocoa/AppDelegate.m
              cpp-options: -DUSE_COCOA
