name: jsaddle
version: 0.6.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScipt helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle

library

    if impl(ghcjs -any)
        build-depends:
            ghcjs-base -any,
            ghcjs-prim -any
    else
        build-depends:
            aeson >=0.8.0.2 && <1.1,
            containers >=0.5.6.2 && <0.6,
            filepath >=1.4.0.0 && <1.5,
            http-types >=0.8.6 && <0.10,
            process >=1.2.3.0 && <1.5,
            ref-tf >=0.4.0.1 && <0.5,
            stm >=2.4.4 && <2.5,
            time >=1.5.0.1 && <1.7
    exposed-modules:
        Language.Javascript.JSaddle
        Language.Javascript.JSaddle.Arguments
        Language.Javascript.JSaddle.Classes
        Language.Javascript.JSaddle.Evaluate
        Language.Javascript.JSaddle.Exception
        Language.Javascript.JSaddle.Monad
        Language.Javascript.JSaddle.Native
        Language.Javascript.JSaddle.Object
        Language.Javascript.JSaddle.Properties
        Language.Javascript.JSaddle.Run
        Language.Javascript.JSaddle.Run.Files
        Language.Javascript.JSaddle.String
        Language.Javascript.JSaddle.Value
        Language.Javascript.JSaddle.Types
    build-depends:
        base <5,
        bytestring >=0.10.6.0 && <0.11,
        lens >=3.8.5 && <4.16,
        primitive >=0.6.1.0 && <0.7,
        template-haskell -any,
        text >=1.2.1.3 && <1.3,
        transformers >=0.4.2.0 && <0.6
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall


