name: jsaddle
version: 0.9.8.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScript helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle

flag call-stacks
  description: Include HasCallStack constraint on calls unchecked calls
  default: False

flag check-unchecked
  description: Fail unchecked calls when they are called (rather than when the result is evaluated)
  default: False

library

    if impl(ghcjs -any)
        build-depends:
            ghcjs-base -any,
            ghcjs-prim -any
    else
        build-depends:
            attoparsec >=0.11 && <0.15,
            containers >=0.5.6.2 && <0.7,
            deepseq >=1.3 && < 1.5,
            filepath >=1.4.0.0 && <1.5,
            ghc-prim,
            http-types >=0.8.6 && <0.13,
            process >=1.2.3.0 && <1.7,
            random >= 1.1 && < 1.3,
            ref-tf >=0.4.0.1 && <0.5,
            scientific >=0.3 && <0.4,
            stm >=2.4.4 && <2.6,
            time >=1.5.0.1 && <1.11,
            unordered-containers >=0.2 && <0.3,
            vector >=0.10 && <0.13,
            unliftio-core >=0.1 && < 0.3
        exposed-modules:
            Data.JSString
            Data.JSString.Internal
            Data.JSString.Internal.Fusion
            Data.JSString.Internal.Fusion.CaseMapping
            Data.JSString.Internal.Fusion.Common
            Data.JSString.Internal.Fusion.Types
            Data.JSString.Internal.Search
            Data.JSString.Internal.Type
            Data.JSString.Text
            GHCJS.Prim
            GHCJS.Prim.Internal
            GHCJS.Types
            GHCJS.Concurrent
            GHCJS.Foreign
            GHCJS.Foreign.Internal
            GHCJS.Internal.Types
            GHCJS.Marshal
            GHCJS.Marshal.Internal
            GHCJS.Marshal.Pure
            GHCJS.Buffer
            GHCJS.Buffer.Types
            JavaScript.TypedArray
            JavaScript.TypedArray.ArrayBuffer
            JavaScript.TypedArray.ArrayBuffer.Internal
            JavaScript.TypedArray.ArrayBuffer.Type
            JavaScript.TypedArray.DataView.Internal
            JavaScript.TypedArray.Immutable
            JavaScript.TypedArray.Internal
            JavaScript.TypedArray.Internal.Types
            JavaScript.Array
            JavaScript.Array.Internal
            JavaScript.Object
            JavaScript.Object.Internal
            Language.Javascript.JSaddle.Debug
            Language.Javascript.JSaddle.Native
            Language.Javascript.JSaddle.Native.Internal
            Language.Javascript.JSaddle.Null
        hs-source-dirs: src-ghc
    exposed-modules:
        Language.Javascript.JSaddle
        Language.Javascript.JSaddle.Arguments
        Language.Javascript.JSaddle.Classes
        Language.Javascript.JSaddle.Classes.Internal
        Language.Javascript.JSaddle.Evaluate
        Language.Javascript.JSaddle.Exception
        Language.Javascript.JSaddle.Helper
        Language.Javascript.JSaddle.Marshal.String
        Language.Javascript.JSaddle.Monad
        Language.Javascript.JSaddle.Object
        Language.Javascript.JSaddle.Properties
        Language.Javascript.JSaddle.Run
        Language.Javascript.JSaddle.Run.Files
        Language.Javascript.JSaddle.String
        Language.Javascript.JSaddle.Value
        Language.Javascript.JSaddle.Types
    build-depends:
        aeson >=0.11.3.0 && <2.1,
        base >=4.9 && <5,
        base-compat >=0.9.0 && <0.12,
        base64-bytestring >=1.0.0.1 && <1.3,
        bytestring >=0.10.6.0 && <0.11,
        exceptions >=0.8 && <0.11,
        lens >=3.8.5 && <5.2,
        primitive >=0.6.1.0 && <0.8,
        text >=1.2.1.3 && <1.3,
        transformers >=0.4.2.0 && <0.6
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall
    if flag(check-unchecked)
        cpp-options: -DCHECK_UNCHECKED
    if flag(call-stacks) || flag(check-unchecked)
        cpp-options: -DJSADDLE_HAS_CALL_STACK
